<resources>
    <string name="app_name">Ewidencja</string>
    <string name="password">hasło</string>
    <string name="new_recipe">Wystaw rachunek</string>
    <string name="new_income">Wprowadź przychód</string>
    <string name="incomes_list">przychody</string>
    <string name="expense_list">koszty</string>
    <string name="new_expense">Wprowadź koszt</string>
    <string name="settings">Ustawienia</string>
    <string name="monthly_records">Ewidencja miesięczna</string>
    <string name="sign_in">zaloguj się</string>
    <string name="register">Załóż konto</string>
    <string name="user_name">nazwa użytkownika</string>
    <string name="do_limitu_przychod_w_zostalo">do limitu przychodów zostało:</string>
    <string name="od_poczatku_roku">Od początku roku:</string>
    <string name="bilans">bilans:</string>
    <string name="ewidencja">Ewidencja</string>
    <string name="koszty">koszty:</string>
    <string name="przychody">przychody:</string>
    <string name="aktualny_miesiac">Aktualny miesiąc:</string>
    <string name="data_sprzedazy">data sprzedaży: RRRR-MM-dd</string>
    <string name="nazwa_towaru_uslugi">nazwa towaru / usługi</string>
    <string name="kwota">kwota:</string>
    <string name="zatwierdz">zatwierdź</string>
    <string name="data_poniesienia_kosztu">data poniesienia kosztu: RRRR-MM-dd</string>
    <string name="rodzaj_kosztu">rodzaj kosztu</string>
    <string name="kwota_brutto">kwota brutto</string>
    <string name="new_expence_text">Pamiętaj, aby w rozliczeniu rocznym móc pomniejszyć przychody o koszty i zapłacić mniejszy podatek, muszą one być udokumentowane imienną fakturą lub rachunkiem oraz należy je przechowywać przez okres 5 lat na wypadek kontroli Urzędu Skarbowego. Dodatkowo muszą one być ściśle powiązane z prowadzoną działalnością nierejestrowaną, tj. poniesienie tych kosztów było niezbędne do uzyskania lub zabezpieczenia przychodu.</string>
    <string name="delete">usuń</string>
    <string name="edit">edytuj</string>
    <string name="podsumowanie_miesiaca">Podsumowanie miesiąca</string>
    <string name="ilosc">ilość:</string>
    <string name="zapisz">zapisz</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="ulica_nr_domu_nr_mieszkania">Ulica nr domu / nr mieszkania</string>
    <string name="miejscowosc">Miejscowość</string>
    <string name="kod_pocztowy">kod pocztowy</string>
    <string name="dane_prowadzacego_dzialalnosc">Dane prowadzącego działalność</string>
    <string name="zmie_haslo">zmień hasło</string>
    <string name="stare_haslo">stare hasło</string>
    <string name="nowe_haslo">nowe hasło</string>
    <string name="powtorz_nowe_haslo">powtórz nowe hasło</string>
    <string name="usun_konto">usuń konto</string>
    <string name="dane_kupujacego">Dane kupującego</string>
    <string name="towar_usluga">Towar / usługa:</string>
    <string name="numer_domu">numer domu</string>
    <string name="cena_jednostkowa">cena jednostkowa</string>
    <string name="nazwa_imie_i_nazwisko">Nazwa / Imię i nazwisko</string>
    <string name="ulica">ulica</string>
    <string name="nazwa_rodzaj">Nazwa / rodzaj</string>
    <string name="wystaw">Wystaw</string>
    <string name="numer_mieszkania">numer mieszkania</string>
    <string name="miara">miara</string>
    <string name="lacznie">Łącznie:</string>
    <string name="wartosc_koncowa">wartość końcowa</string>
    <string name="nip">nip</string>
    <string name="wystaw_rachunek">Wystaw rachunek</string>
    <string name="szczegoly_rachunku">szczegóły rachunku</string>
    <string name="pozycje_dokumentu">Pozycje dokumentu:</string>
    <string name="miejsce_wystawienia">Miejsce wystawienia</string>
    <string name="sposob_platnosci">Sposób płatności:</string>
    <string name="gotowka">gotówka</string>
    <string name="przelew">przelew</string>
    <string name="dodaj_pozycj_string_pozycje_dokumentu">dodaj pozycję dokumentu</string>
    <string name="ilosc2">ilość</string>
    <string name="dodaj_dane_kupujacego">dodaj dane kupującego</string>
    <string name="dane_rachunku">dane rachunku</string>
    <string name="generuj_pdf">generuj PDF</string>
    <string name="ulica_nr_nr">ulica nr / nr</string>
    <string name="kod_miejscowosc">kod, miejscowość</string>
    <string name="nip_">NIP:</string>
    <string name="rachunek_nr">Rachunek nr</string>
    <string name="miejscowosc_dnia_rrrr_mm_dd">miejscowość, dnia RRRR-mm-dd</string>
    <string name="nabywca">Nabywca:</string>
</resources>
