<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/receipt_item_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="0.05"
        android:text="Lp."
        android:textSize="10sp" />

    <TextView
        android:id="@+id/receipt_item_lv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="0.3"
        android:text="@string/nazwa_towaru_uslugi"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/receipt_item_lv_measure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="end"
        android:text="@string/miara"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/receipt_item_lv_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="end"
        android:text="@string/ilosc2"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/receipt_item_lv_unit_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="end"
        android:text="@string/cena_jednostkowa"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/receipt_item_lv_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_weight="0.2"
        android:gravity="end"
        android:text="wartość"
        android:textSize="10sp" />
</LinearLayout>