<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_receipt_lt"
    tools:context=".CreateReceipt">

    <TextView
        android:id="@+id/create_receipt_place_create_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:gravity="end"
        android:hint="@string/miejscowosc_dnia_rrrr_mm_dd"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/create_receipt_name_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/create_receipt_place_create_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:hint="@string/nazwisko"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_user_name_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="0dp"
        android:hint="@string/nazwisko"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_place_create_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:hint="@string/ulica_nr_nr"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_user_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_user_name_surname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="0dp"
        android:hint="@string/ulica_nr_nr"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_postcode_city"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_street"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:hint="@string/kod_miejscowosc"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_user_postcode_city"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_user_street"
        android:layout_alignParentStart="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="0dp"
        android:hint="@string/kod_miejscowosc"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_nip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_postcode_city"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:hint="@string/nip_"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_receipt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/rachunek_nr"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/create_receipt_sale_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_items_lv"
        android:layout_alignEnd="@+id/create_receipt_postcode_city"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:gravity="start"
        android:hint="@string/data_sprzedazy"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/create_receipt_method_of_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_sale_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:gravity="start"
        android:hint="@string/sposob_platnosci"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp"
        android:layout_toEndOf="@+id/create_receipt_sale_date"
        android:gravity="end"
        android:text="@string/lacznie"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/create_receipt_total_value"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="420dp" />

    <TextView
        android:id="@+id/create_receipt_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textView20"
        android:gravity="end"
        android:hint="@string/wartosc_koncowa"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="420dp" />

    <ListView
        android:id="@+id/create_receipt_items_lv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView20"
        android:layout_below="@+id/create_receipt_receipt_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_line"
        android:divider="@color/colorPrimaryDark"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/nabywca"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_place_create_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="225dp"
        android:layout_marginTop="0dp"
        android:text="Sprzedawca:"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/create_receipt_amount_in_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_receipt_sale_date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        android:text="TextView"
        android:textSize="9sp" />

</RelativeLayout>